--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
+<!doctype html>
+
 <html>
-    <title>RCM practice</title>
-    <link rel="stylesheet" href="index.css">
+    <head>
+        <meta charset=utf-8>
+        <title>RCM practice</title>
+        <link rel="stylesheet" href="index.css">
+        <script type="module" src="main.js"></script>
+    </head>
+    <body>
+        <h1 class="title">RCM Scale Practice</h1>
+        <div class="level-container">
+            <button>Level 1</button>
+            <button>Level 2</button>
+            <button>Level 3</button>
+            <button>Level 4</button>
+        </div>
+        <h2 class="scale">C</h1>
+        <p class="fingering">im, freestroke</p>
+        <div class="next-reset-container">
+            <button>Next</button>
+            <button>Reset</button>
+        </div>
+        <div class="footer">
+            <span>Dedicated to Michael Murray and his students</span>
+        </div>
+    </body>
 </html>
-<body>
-    <h1 class="title">RCM Scale Practice</h1>
-    <div class="level-container">
-        <button>Level 1</button>
-        <button>Level 2</button>
-        <button>Level 3</button>
-        <button>Level 4</button>
-        <button>Level 5</button>
-        <button>Level 6</button>
-        <button>Level 7</button>
-    </div>
-    <h1 class="scale">C#</h1>
-    <p class="fingering">im, freestroke</p>
-    <div class="next-reset-container">
-        <button>Next</button>
-        <button>Reset</button>
-    </div>
-    <div class="footer">
-        <span>Dedicated to Michael Murray and his students</span>
-    </div>
-</body>
