Add progress text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button>Next</button>
             <button>Reset</button>
         </div>
+        <p class="progress-text">0 of 0</p>
         <div class="footer">
             <span>Dedicated to Michael Murray and his students</span>
         </div>
