--- a/index.html
+++ b/index.html
@@ -8,22 +8,33 @@
         <script type="module" src="main.js"></script>
     </head>
     <body>
-        <h1 class="title">RCM Scale Practice</h1>
-        <div class="level-container">
-            <button>Level 1</button>
-            <button>Level 2</button>
-            <button>Level 3</button>
-            <button>Level 4</button>
+        <header>
+            <img src="./little-guy.png">
+            <div class="header-text">
+                <h1>RCM Scale Practice</h1>
+                <h3>Test your memory with random scales and fingerings</h2>
+            </div>
+        </header>
+        <div class="vertical-container">
+            <div class="level-container">
+                <button>Level 1</button>
+                <button>Level 2</button>
+                <button>Level 3</button>
+                <button>Level 4</button>
+            </div>
+            <div>
+                <h2 class="scale">C</h1>
+                <p class="fingering">im, freestroke</p>
+            </div>
+            <div class="next-reset-container">
+                <button>Next</button>
+                <button>Reset</button>
+            </div>
+            <p class="progress-text">0 of 0</p>
         </div>
-        <h2 class="scale">C</h1>
-        <p class="fingering">im, freestroke</p>
-        <div class="next-reset-container">
-            <button>Next</button>
-            <button>Reset</button>
-        </div>
-        <p class="progress-text">0 of 0</p>
-        <div class="footer">
-            <span>Dedicated to Michael Murray and his students</span>
-        </div>
+        <footer>
+            <span>Dedicated to <a href="https://michaelmurrayguitar.com/">Michael Murray</a> and his students</span>
+            <span><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></span>
+        <footer>
     </body>
 </html>
