Add more levels

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta charset=utf-8>
         <title>RCM practice</title>
         <link rel="stylesheet" href="index.css">
@@ -22,6 +23,8 @@
                     <button id="level2">Level 2</button>
                     <button id="level3">Level 3</button>
                     <button id="level4">Level 4</button>
+                    <button id="level5">Level 5</button>
+                    <button id="level6">Level 6</button>
                 </div>
                 <div>
                     <h2 class="scale">C</h1>
