--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset=utf-8>
         <title>RCM practice</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" type="image/png" href="./little-guy.png">
         <script type="module" src="main.js"></script>
     </head>
     <body>
