--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <script type="module" src="main.js"></script>
     </head>
     <body>
-        <div class="box">
+        <div class="main-container">
             <header>
                 <img src="./little-guy.png">
                 <div class="header-text">
-                    <h1>RCM Scale Practice</h1>
+                    <h1 class="header-title">RCM Scale Practice</h1>
                     <h3>Test your memory with random scales and fingerings</h2>
                 </div>
             </header>
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <footer>
-                <span>Dedicated to <a href="https://michaelmurrayguitar.com/">Michael Murray</a> and his students</span>
-                <span><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></span>
+                <p>Dedicated to <a href="https://michaelmurrayguitar.com/">Michael Murray</a> and his students</p>
+                <p><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></p>
             </footer>
         </div>
     </body>
