Make mobile first

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./little-guy.png">
                 <div class="header-text">
                     <h1 class="header-title">RCM Scale Practice</h1>
-                    <h3>Test your memory with random scales and fingerings</h2>
+                    <h3 class="header-subtitle">Test your memory with random scales and fingerings</h2>
                 </div>
             </header>
             <div class="vertical-container">
@@ -47,7 +47,7 @@
             </div>
             <footer>
                 <p>Dedicated to <a href="https://michaelmurrayguitar.com/">Michael Murray</a> and his students</p>
-                <p><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></p>
+                <p class="github"><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></p>
             </footer>
         </div>
     </body>
