--- a/index.html
+++ b/index.html
@@ -19,20 +19,7 @@
                 </div>
             </header>
             <div class="vertical-container">
-                <div class="level-container">
-                    <div>
-                        <button id="level1">Level 1</button>
-                        <button id="level2">Level 2</button>
-                        <button id="level3">Level 3</button>
-                        <button id="level4">Level 4</button>
-                    </div>
-                    <div>
-                        <button id="level5">Level 5</button>
-                        <button id="level6">Level 6</button>
-                        <button id="level7">Level 7</button>
-                        <button id="level8">Level 8</button>
-                    </div>
-                </div>
+                <div class="level-container"></div>
                 <div>
                     <h2 class="scale">C</h1>
                     <p class="fingering">im, freestroke</p>
