--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <p class="progress-text">0 of 0</p>
                 </div>
             </div>
+            <div class="progress-bar">
+                <div></div>
+            </div>
             <footer>
                 <p>Dedicated to <a href="https://michaelmurrayguitar.com/">Michael Murray</a> and his students</p>
                 <p class="github"><a href="https://github.com/braedon2/RCM-scale-practice">Code on Github</a></p>
